Include team name in overtime query results
- Return team names from the overtime aggregation query using LEFT JOIN + COALESCE to avoid per-employee repository lookups and remove N+1 risk
- Group by team to match the select list and prevent SQL grouping errors
- Plumb teamName through TotalWorkingMinutes -> OverTimeCalculateResponse -> OverTimeReportData and update controller/service tests
- Add JPA slice test for findWithEmployeeIdByDateRange to verify unassigned employees get the "미배정" default